<resources>
    <string name="app_name">Hyd Traffic Live</string>
    <string name="app_full_name">Hyderabad Traffic Live</string>
    <string name="for_you_with_you_always">FOR YOU, WITH YOU, ALWAYS</string>
    <string name="select_your_language_below">Select your Language below</string>
    <string name="language_telugu">తెలుగు</string>
    <string name="language_english">English</string>
    <string name="footer_text">TELANGANA STATE POLICE</string>
    <string name="app_version">1.0.0</string>
    <string name="public_interface">Public Interface</string>
    <string name="public_interface_caps">PUBLIC INTERFACE</string>
    <string name="auto_fare_estimation">Auto Fare Estimation</string>
    <string name="live_traffic">Live Traffic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="phone_no">Phone No.</string>
    <string name="when_why_whom_and_how">When, Why, Whom and How ?</string>
    <string name="type_location">Type a Location</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="false_report_to_police_is_a_punishable_offence">* Note: False report to police is a punishable offence</string>
    <string name="clear">Clear</string>
    <string name="get_data">Get Data</string>
    <string name="enter_above_captcha">Enter Above Captcha</string>
    <string name="enter_valid_captcha">Enter Valid Captcha</string>
    <string name="enter_vehicle_no">Enter Vehicle Number</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="captcha_text">14214</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="home">Home</string>
    <string name="hyderabad_traffic_live">HYDERABAD TRAFFIC LIVE</string>
    <string name="public_complaints">Public Complaints</string>
    <string name="public_information">Public Information</string>
    <string name="vehicle_rta_details">Vehicle\nRTA Details</string>
    <string name="find_your_towed_vehicle">Find your\nTowed Vehicle</string>
    <string name="e_challan_status">e-Challan Status</string>
    <string name="near_by">Near by</string>
    <string name="comment">Comments</string>
    <string name="enter_driver_name">Enter Drivers Name</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="complaint">Complaint</string>
    <string name="type_a_complaint">Type a complaint</string>
    <string name="cancel">Cancel</string>
    <string name="neutral">Neutral</string>
    <string name="select_file">Select File</string>
    <string name="browse">Browse</string>
    <string name="regn_no">Regn. No.</string>
    <string name="close">Close</string>
    <string name="please_contact_htc_room">* Please contact Hyderabad Traffic Control Room at Phone: 9010203626</string>
    <string name="towed_vehicle_details">Towed Vehicle Details</string>
    <string name="owner_name">Owner Name</string>
    <string name="detained_date">Detained Date</string>
    <string name="trps_name">TRPS Name</string>
    <string name="location">Location</string>
    <string name="officer_name">Officer Name</string>
    <string name="ps_contact_no">TRPS Contact No.</string>
    <string name="title_activity_autofare_estm">Map</string>
    <string name="enter_a_location">Enter a location</string>
    <string name="estimation">Estimation</string>
    <string name="rate_chart">Rate Chart</string>
    <string name="auto_fare_chart">Auto Fare Chart</string>
    <string name="meter_kms">Meter\n(Kms)</string>
    <string name="day_inr">Day\n(INR)</string>
    <string name="night_inr">Night\n(INR)</string>
    <string name="note">Note:</string>
    <string name="auto_fare_chart_note">1. Minimum fare: \u20B9 20 for first 1.6km.\n2. Fare above minimum fare: \u20B9 11 per km.\n3. Waiting charges per hour \u20B9 30.\n4. Night charges apply from 11:00pm to 05:00am.</string>
    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="fare_estimation">Fare Estimation</string>
    <string name="select_destination">Select Destination</string>
    <string name="fare_estimation_note">* The above fare and Kilometers are approx. values, this may vary depends on the route journey, waiting time amd journey time, Fare is subject Local RTA.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_liva_traffic">Map</string>
    <string name="enter_source">Enter Source</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="title_activity_near_by">Map</string>
    <string name="check_parking_space">Check Parking Space</string>
    <string name="alerts">Alerts</string>
    <string name="suggestions">Suggestions</string>
    <string name="rules_and_information">Rules &amp; Information</string>
    <string name="about_traffic_police">About Traffic Police</string>
    <string name="alert_text">Dt: 12–09–2018 at 09:22 hrs - Slow movement of traffic from Karkhana to Secunderabad club.</string>
    <string name="updated_dt_text">Updated Dt: 12–09–2018 09:25hrs</string>
    <string name="updated_dt_text2">Updated on\n12/09/2018 09:25</string>
    <string name="load_more"><u>Load More</u></string>
    <string name="we_are_waiting_for_your_valuable_suggestions">We are waiting for your valuable Suggestions</string>
    <string name="please_let_us_know_your_valuable_suggestions">Please let us know your valuable suggestions</string>
    <string name="name">Name</string>
    <string name="driver_name">Driver\'s Name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="contact_no">Contact No.</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="enter_contact_no">Enter Contact No.</string>
    <string name="suggestion">Suggestion</string>
    <string name="message">Message</string>
    <string name="type_a_message">Type a message</string>
    <string name="write_a_suggestion">Write a Suggestion</string>
    <string name="complaint_against_all_public_services">Complaint against all Public services</string>
    <string name="your_details">Your Details</string>
    <string name="your_name">Your Name</string>
    <string name="your_email_id">Your Email ID</string>
    <string name="your_mobile_no">Your Mobile No.</string>
    <string name="traffic_violation_fines">Traffic Violation Fines</string>
    <string name="useful_websites">Useful Websites</string>
    <string name="faqs">FAQs</string>
    <string name="road_safety_tips">Road Safety Tips</string>
    <string name="traffic_signs">Traffic Signs</string>
    <string name="htl_on_fb">HTL on FB</string>
    <string name="traffic_officers">Traffic Officers</string>
    <string name="organization_chart">Organization Chart</string>
    <string name="traffic_police_info">Traffic Police Info</string>
    <string name="about_htl">About HTL</string>
    <string name="traffic_control_room">Traffic Control Room</string>
    <string name="hyd_traffic_police_stations">Hyd Traffic Police Stations</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="ambulance">Ambulance</string>
    <string name="fire_station">Fire Station</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="crime_alert">Crime Alert</string>
    <string name="women_children_helpline">Women/Children Helpline</string>
    <string name="senior_citizen_helpline">Senior Citizen Helpline</string>
    <string name="contin_u">Continue</string>
    <string name="go">Go</string>
    <string name="click_to_continue">Click to continue</string>
    <string name="government_of_india">Government of India.</string>
    <string name="colon">:</string>
    <string name="what_documents_should_a_driver_carry_when_driving">What documents should a driver carry when driving ?</string>
    <string name="captcha">Captcha</string>
    <string name="na">-</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="maker_s_name">Makers Name</string>
    <string name="mfg_year">Mfg. Year</string>
    <string name="date_of_registration">Date of Registration</string>
    <string name="chassis_no">Chassis No.</string>
    <string name="tr_ps_gopalapuram">Tr.PS Gopalapuram</string>
    <string name="enter_complaint">Enter Complaint</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="enter_complaint_type">Enter Complaint type</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_email_id">Enter your Email ID</string>
    <string name="enter_your_mobile_no">Enter your Mobile No.</string>
    <string name="vehicle_number">Vehicle Number</string>
</resources>