<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PublicComplaintsActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_home" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/complaint"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_complaint"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_complaint"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/complaint_type"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_complaint_type"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_complaint_type"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/vehicle_number"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_vehicle_no"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_vehicle_no"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/name"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_drivers_name"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/driver_name"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/comment"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_type_a_complaint"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_comment"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="6dp"
                android:text="@string/your_details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dashboard_htp_header_text_size"
                android:textStyle="bold" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/your_name"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_your_name"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/your_email_id"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_your_email_id"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_your_email_id"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/your_mobile_no"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_your_mobile_no"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/enter_your_mobile_no"
                android:inputType="phone"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/button_style"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/submit" />

            <TextView
                android:id="@+id/tv_already_have_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:textSize="14sp"
                android:text="@string/false_report_to_police_is_a_punishable_offence"
                android:textColor="@color/colorRed" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>