<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SuggestionsActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_home" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:singleLine="false"
                android:text="@string/we_are_waiting_for_your_valuable_suggestions"
                android:textColor="@color/colorAccentDark"
                android:textStyle="bold" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/name"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_name"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/email"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_email_id"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/contact_no"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_contact_no"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_contact_no"
                android:inputType="phone"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/suggestion"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_suggestion"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/write_a_suggestion"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/button_style"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>