<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RtaTowingActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_home" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/vehicle_number"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_vehicle_no"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_vehicle_no"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_captcha"
                style="@style/edit_text_style_drawable"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:enabled="false"
                android:hint="@string/captcha"
                android:textSize="24sp"
                android:inputType="number"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/captcha"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_enter_above_captcha"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_above_captcha"
                android:inputType="number"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <!--<Button
                android:id="@+id/btn_get_data"
                style="@style/button_style"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/submit" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_clear"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/clear" />

                <Button
                    android:id="@+id/btn_get_data"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/get_data" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>