<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_bg"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="24dp"
            android:paddingBottom="12dp"
            android:text="@string/hyderabad_traffic_live"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/htp_header_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/header_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/main_btn_top_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/for_you_with_you_always"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/for_u_with_u_always_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_english"
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_btn_top_margin"
                android:background="@drawable/button_style_round"
                android:text="@string/language_english"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/main_btn_size"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_telugu"
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_btn_top_margin"
                android:layout_marginBottom="@dimen/main_btn_top_margin"
                android:background="@drawable/button_style_round"
                android:text="@string/language_telugu"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/main_btn_size"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

    <!--<TextView
        android:id="@+id/footer"
        style="@style/footer_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />-->

</RelativeLayout>